--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <title>React App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+</head>
+<body>
+<h1 style="text-align: center; margin: 100px;">Поиск</h1>
+<div id="root"></div>
+</body>
 </html>
